# dttto

./: .env-example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  setup.sh
dttto/: __init__.py  app.py
dttto/accounts/: forms.py  models.py  views.py
dttto/core/: views.py
dttto/templates/: _base.html  index.html  navigation.html
dttto/templates/accounts/: login.html  register.html
dttto/templates/core/: index.html  transcript_list.html
